Fix z-index when the diagram is open

--- a/low-code-editor/src/PreLoader/TextPreLoader/styles.scss
+++ b/low-code-editor/src/PreLoader/TextPreLoader/styles.scss
@@ -11,6 +11,7 @@
     width: 100vw;
     top: -15px;
     background: #e6e7ec6e;
+    z-index: 1;
 
     div {
         overflow: hidden;
